welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:1: error: ')' expected but ':' found.
def max1020(a:Int, b:Int:Int = {
                        ^